Added memo number

--- a/mmm-minorcycle-ska.tex
+++ b/mmm-minorcycle-ska.tex
@@ -46,10 +46,10 @@
 
 % Enter here some information needed to fill in the template Title to appear
 % on the front pages (will be filled in via the \sdpfrontpage command)
-\newcommand{\bigdoctitle}{SKA Memo ???: Distribution of the Rau-Cornwell MSMFS algorithm \xspace}
+\newcommand{\bigdoctitle}{SKA Memo 83: Distribution of the Rau-Cornwell MSMFS algorithm \xspace}
 % Title to go in the "Document Status Sheet" Document number
 \newcommand{\doctype}{Memo}
-\newcommand{\docnr}{SKA Memo ???\xspace}
+\newcommand{\docnr}{SKA Memo 83\xspace}
 % Context
 \newcommand{\context}{(SDP.PIP)}
 % Revision
