Change SKA to SDP memo

--- a/mmm-minorcycle-ska.tex
+++ b/mmm-minorcycle-ska.tex
@@ -46,14 +46,14 @@
 
 % Enter here some information needed to fill in the template Title to appear
 % on the front pages (will be filled in via the \sdpfrontpage command)
-\newcommand{\bigdoctitle}{SKA Memo 83: Distribution of the Rau-Cornwell MSMFS algorithm \xspace}
+\newcommand{\bigdoctitle}{SDP Memo 83: Distribution of the Rau-Cornwell MSMFS algorithm \xspace}
 % Title to go in the "Document Status Sheet" Document number
 \newcommand{\doctype}{Memo}
-\newcommand{\docnr}{SKA Memo 83\xspace}
+\newcommand{\docnr}{SDP Memo 83\xspace}
 % Context
 \newcommand{\context}{(SDP.PIP)}
 % Revision
-\newcommand{\revision}{0.9\xspace}
+\newcommand{\revision}{1.0\xspace}
 % Author(s)
 \newcommand{\docauthor}{T.J.\ Cornwell\xspace}
 % Lead author (goes in the footer)
@@ -75,7 +75,7 @@
 % Document classification
 \newcommand{\classification}{Unrestricted}
 % Status of the document (draft/final/etc.)
-\newcommand{\docstatus}{Draft\xspace}
+\newcommand{\docstatus}{Released\xspace}
 
 % The definitions below are used for the signature tables in the preamble of
 % the document
